--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,18 @@
     color: #394166;
 }
 
-h1{
-    font-size: 24px;
-}
+.nameTag {
+    h1{
+        font-size: 24px;
+    }
 
-p {
-    font-size: 20px;
-}
+    p {
+        font-size: 20px;
+    }
 
-#smaller_paragraph {
-    font-size: 14px;
+    #smaller_paragraph {
+        font-size: 14px;
+    }
 }
 
 .box {
